@@ -210,7 +210,7 @@ class Check(object):
             # No progress here, because it looks ugly.
             w.check()
             result = weave_checker.check_file_version_parents(w, weave_id,
-                self.planned_revisions)
+                w.versions())
             bad_parents, unused_versions = result
             bad_parents = bad_parents.items()
             for revision_id, (weave_parents, correct_parents) in bad_parents:
